# ICTPro_Pyth2_251215

./: README.md  requirements.txt
m01_basic/: p01_variables.py
m02_project/: p01_main.py  p02_module.py  p03_module_hello.py  p04_import1.py  p05_import2.py  p06_import3.py  p07_import4.py  p08_duplicate_function.py  p09_python_path.py
m02_project/my_awesome_package/: LICENSE  README.md  pyproject.toml
m02_project/my_awesome_package/My_awesome_package.egg-info/: PKG-INFO  SOURCES.txt
m02_project/my_awesome_package/my_awesome_package/: simple_module.py
m03_functions/: p01_task_prime_numbers.py  p02_arguments.py  p03_task_fibonacci.py  p04_recursion.py  p05_LEGB.py  p06_nonlocal.py  p07_function_factory.py  p08_functional_programming.py  p09_typing.py
m04_oop/: p01_first_class.py  p02_circle.py  p03_person.py  p04_task_book.py  p05_inheritance.py  p06_multiple_inheritance.py  p07_mixin.py  p08_decorator.py
m05_generators/: p01_slicing.py  p02_prime_iterator.py  p03_task_fib_iterator.py  p04_simple_generator.py  p05_file.py
m06_serialization/: data.csv  models.py  p01_pickle.py  p02_json.py  p03_csv.py  p04_sql.py  p05_sql_insert.py  p06_sql_select.py  p07_sqlalchemy_create_table.py  p08_sqlalchemy_add_data.py
m07_debugging/: p01_pprint.py  p02_logging.py
m08_online/: p01_requests.py  p02_server.py  p03_client.py
